condense ui for s2s

--- a/s2s/index.html
+++ b/s2s/index.html
@@ -425,10 +425,9 @@
                             }
                         </style>
                     </head>
-                    <body>
+                    <body style="padding: 0">
                         <div class="container">
                             <main class="main-content">
-                                <h1>Send</h1>
                                 <div class="form-and-previews">
                                     <form
                                         class="send-form"
