Change date formatting

--- a/s2s/index.html
+++ b/s2s/index.html
@@ -1100,7 +1100,16 @@ Thank you!</textarea
                             schoolName: "school_name", // Correctly mapped from campaign.schoolName
                         };
                         if (mapping[key]) {
-                            finalHtml = replace(finalHtml, mapping[key], value);
+                            // Apply formatDate specifically to orderDueDate
+                            const processedValue =
+                                key === "orderDueDate" && value
+                                    ? formatDate(value)
+                                    : value;
+                            finalHtml = replace(
+                                finalHtml,
+                                mapping[key],
+                                processedValue,
+                            );
                         }
                     });
                     // --- END FIX 3 ---
@@ -1423,7 +1432,12 @@ Thank you!</textarea
                             schoolName: "school_name",
                         };
                         if (mapping[key]) {
-                            body = replace(body, mapping[key], value);
+                            // Apply formatDate specifically to orderDueDate
+                            const processedValue =
+                                key === "orderDueDate" && value
+                                    ? formatDate(value)
+                                    : value;
+                            body = replace(body, mapping[key], processedValue);
                         }
                     });
                     // --- END FIX 6 ---
@@ -1486,6 +1500,17 @@ Thank you!</textarea
             sendForm.addEventListener("submit", handleFormSubmit);
 
             initializeApp();
+
+            function formatDate(input) {
+                console.log("Formatting date: " + input);
+                const [year, month, day] = input.split("-").map(Number);
+                const date = new Date(year, month - 1, day); // Month is 0-based
+                return date.toLocaleDateString("en-US", {
+                    weekday: "long",
+                    month: "long",
+                    day: "numeric",
+                });
+            }
         })();
     </script>
 </html>
